# src/main/java/com/developerkw/estore/controller/BasketController.java
@@ -1,6 +1,11 @@
 package com.developerkw.estore.controller;
 
+import com.developerkw.estore.discount.DiscountEnum;
 import com.developerkw.estore.model.BasketItem;
+import com.developerkw.estore.model.Product;
+import com.developerkw.estore.model.ProductDto;
+import com.developerkw.estore.model.PurchaseDto;
+import com.developerkw.estore.model.ReceiptDto;
 import com.developerkw.estore.repository.BasketRepository;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -12,6 +17,7 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import java.math.BigDecimal;
 import java.security.Principal;
 import java.util.List;
 
@@ -55,6 +61,58 @@ public class BasketController {
         }
     }
 
+    @GetMapping("/checkout")
+    public ResponseEntity<ReceiptDto> checkout(Principal principal) {
+        List<BasketItem> basketItems = basketRepository.findByUserName(principal.getName());
+        if (basketItems.size() > 0) {
+            return ResponseEntity.ok(generateReceiptDto(basketItems, principal.getName()));
+        } else {
+            return ResponseEntity.notFound().build();
+        }
+    }
 
+    private ReceiptDto generateReceiptDto(List<BasketItem> basketItems, String userName) {
+        var purchaseDtoList = basketItems.stream()
+            .map(this::purchaseDtoMapper)
+            .toList();
+        var receiptDto = new ReceiptDto();
+        receiptDto.setUsername(userName);
+        receiptDto.setPurchases(purchaseDtoList);
+        BigDecimal totalPrice = purchaseDtoList.stream()
+            .map(PurchaseDto::getDiscountedTotalPrice)
+            .reduce(BigDecimal.ZERO, BigDecimal::add);
+        receiptDto.setTotalPrice(totalPrice);
+        return receiptDto;
+    }
+
+    private PurchaseDto purchaseDtoMapper(BasketItem basketItem) {
+        var purchseDto = new PurchaseDto();
+        purchseDto.setProduct(productDtoMapper(basketItem.getProduct()));
+        purchseDto.setQuantity(basketItem.getQuantity());
+        var price = basketItem.getProduct().getPrice();
+        var total = new BigDecimal(purchseDto.getQuantity()).multiply(price);
+        purchseDto.setOriginalTotalPrice(total);
+        purchseDto.setDiscountedTotalPrice(total);
+        applyDiscounts(purchseDto);
+        return purchseDto;
+    }
+
+    private ProductDto productDtoMapper(Product product) {
+        var productDto = new ProductDto();
+        productDto.setId(product.getId());
+        productDto.setName(product.getName());
+        productDto.setCategory(product.getCategory());
+        productDto.setStock(product.getStock());
+        productDto.setPrice(product.getPrice());
+        productDto.setDiscounts(product.getDiscounts());
+        return productDto;
+    }
+
+    private void applyDiscounts(PurchaseDto purchaseDto) {
+        for (String discountName : purchaseDto.getProduct().getDiscounts()) {
+            var discount = DiscountEnum.valueOf(discountName);
+            discount.getDiscount().apply(purchaseDto);
+        }
+    }
 
 }
